Bug 453949 - GMIC:The result of the "boost fade" filter is incorrect
Summary: GMIC:The result of the "boost fade" filter is incorrect
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: G'Mic for Krita (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: amyspark
URL: https://github.com/amyspark/gmic/comm...
Keywords:
Depends on:
Blocks:
 
Reported: 2022-05-17 19:13 UTC by thetwo
Modified: 2022-05-26 14:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
pic (958.48 KB, image/png)
2022-05-17 19:13 UTC, thetwo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description thetwo 2022-05-17 19:13:12 UTC
Created attachment 148930 [details]
pic

SUMMARY

As shown in the figure, the result is an unexpected purplish red color.
Comment 1 amyspark 2022-05-17 20:32:41 UTC
Can you send the test KRA of the image you were converting?
Comment 2 amyspark 2022-05-25 15:37:37 UTC
Confirming with G'MIC 3.1.2. The problem is on the plugin side, Halla never accounted for images with depth higher than 1.

See for reference: https://github.com/c-koi/gmic-qt/commit/ff1a439d8cd1d558b16480b385e634f4a278e247

Every other host does not face this issue because they parse the R, G, B, and A planes separately, by asking CImg for the correct offset.
Comment 3 amyspark 2022-05-25 15:38:31 UTC
Scheduled for the next tarball rollup.
Comment 4 Bug Janitor Service 2022-05-26 00:47:26 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1459
Comment 5 amyspark 2022-05-26 14:27:34 UTC
Git commit 73fbcfb137b7a88e5b179fae7da9e4f238a8b109 by L. E. Segovia.
Committed on 26/05/2022 at 13:29.
Pushed by lsegovia into branch 'master'.

Update G'MIC to 3.1.2.2
Related: bug 453945, bug 453947, bug 454100, bug 454286

M  +2    -2    3rdparty_plugins/ext_gmic/CMakeLists.txt [INFRASTRUCTURE]

https://invent.kde.org/graphics/krita/commit/73fbcfb137b7a88e5b179fae7da9e4f238a8b109