Fix output of multi-depth images

When the Krita host was first implemented, it was never noticed that
some filters return images with depths higher than 1.

BUG: 453949